Hot links -> local images

--- a/animals.html
+++ b/animals.html
@@ -55,14 +55,14 @@
 								<h1 class="aa-heading">Animal World</h1>
 								<p class="aa-para">Creating a social website for animal lovers to create an account, share images of their favorite animals, tag images, and manage photos.</p>
 								<p class="aa-para">Front-end: HTML, CSS, JavaScript<br/>Back-end: PHP, SQL</p>
-								<img class="aa-img" src="https://static.wixstatic.com/media/f0a7d3_974e338b1ac14bc28d1ad68235b5afda~mv2_d_2480_1418_s_2.png/v1/fill/w_740,h_423,al_c,usm_0.66_1.00_0.01/f0a7d3_974e338b1ac14bc28d1ad68235b5afda~mv2_d_2480_1418_s_2.png">
+								<img class="aa-img" src="images/animals01.png">
 								<h2 class="subhead">Creating a persona for my audience</h2>
 								<p class="aa-para">In creating my persona I chose to use a new method pioneered by HCI (Human-Computer Interaction) researchers known as GenderMag. This project provides personas that represent the most common various information processing styles for users of the web.</p>
-								<img class="aa-img" src="https://static.wixstatic.com/media/f0a7d3_aa5e8baf377641c8947afb33a2c90817~mv2.png/v1/fill/w_740,h_554,al_c,usm_0.66_1.00_0.01/f0a7d3_aa5e8baf377641c8947afb33a2c90817~mv2.png">
+								<img class="aa-img" src="images/animals02.png">
 								<p class="aa-para">For instance, I selected the persona of Abby since I think she represents an important demographic likely to use my animal-lover website: a casual user of technology and a wholistic information processor. By designing for Abby, I will also make the site accessible to the most amount of people as possible, since I will be forced to think about designing a site that is as user friendly and accessible as possible.</p>
 								<h2 class="subhead">Creating the initial Design</h2>
 								<div class="aa-sectioning">
-									<img src="https://static.wixstatic.com/media/f0a7d3_d0bd8888dec74f88a8ccba6f03270f4a~mv2.png/v1/fill/w_350,h_354,al_c,usm_0.66_1.00_0.01/f0a7d3_d0bd8888dec74f88a8ccba6f03270f4a~mv2.png">
+									<img src="images/animals03.png">
 									<p class="aa-para">I thought this sketch would be great for Abby since it does not overwhelm her with too much information at once, rather it places the emphasis on the animal, with the option to change animals.</p>
 									<p class="aa-para">The wireframe expands on this idea with a navigation bar that includes a  conditional statement, so the only other page for Abby to worry about will be the login/logout.  Further, for the animal Abby chooses it shows additional information specific to that animal such as its name and user generated tags for that image.<br/>
 									<strong>Planning the Database Schema</strong>
@@ -72,7 +72,7 @@
 									* field 2: image_name - the name of the file of the image (TEXT) NOT NULL<br/>
 									* field 3: image_extension - the file extension of the image (TEXT) NOT NULL<br/>
 									* field 4: tag - The (user created) tag for the image (TEXT) NOT NULL </p>
-									<img src="https://static.wixstatic.com/media/f0a7d3_899966a3e2c5466f81e37ad987974c19~mv2.png/v1/fill/w_350,h_553,al_c,usm_0.66_1.00_0.01/f0a7d3_899966a3e2c5466f81e37ad987974c19~mv2.png">
+									<img src="images/animals04.png">
 								</div>
 								<p class="aa-para">
 									<strong>Implementation in PHP and SQL</strong><br>
@@ -93,18 +93,18 @@
 									This code snippet creates a gallery table which provides keys for each image that will be in the database, as well as attributes about that image such as its file extension, the URL source, the user who uploaded, etc.
 								</p>
 								<div class="aa-sectioning2">
-									<img src="https://static.wixstatic.com/media/f0a7d3_b5fa7da49fe147828a1d9d20027df868~mv2.png/v1/fill/w_250,h_250,fp_0.50_0.50,q_90,usm_0.66_1.00_0.01/f0a7d3_b5fa7da49fe147828a1d9d20027df868~mv2.webp">
-									<img src="https://static.wixstatic.com/media/f0a7d3_ac30ff247b8d470f9b2dbe7a7887a4ec~mv2.png/v1/fill/w_250,h_250,fp_0.50_0.50,q_90,usm_0.66_1.00_0.01/f0a7d3_ac30ff247b8d470f9b2dbe7a7887a4ec~mv2.webp">
-									<img src="https://static.wixstatic.com/media/f0a7d3_c4cf65c44b9d4a53bdc486b485c04b43~mv2.png/v1/fill/w_250,h_249,fp_0.50_0.50,q_90,usm_0.66_1.00_0.01/f0a7d3_c4cf65c44b9d4a53bdc486b485c04b43~mv2.webp">
+									<img src="images/animals05.webp">
+									<img src="images/animals06.webp">
+									<img src="images/animals07.webp">
 								</div>
-								<img class="aa-slider aa-img" src="https://static.wixstatic.com/media/f0a7d3_03827f88c0024960b0ef3f8b79d447a5~mv2_d_2480_1418_s_2.png/v1/fill/w_750,h_408,fp_0.50_0.50,q_90,usm_0.66_1.00_0.01/f0a7d3_03827f88c0024960b0ef3f8b79d447a5~mv2_d_2480_1418_s_2.webp">
+								<img class="aa-slider aa-img" src="images/animals01.png">
 								<div class="aa-sectioning3">
-									<img onclick="slider(this.src)" src="https://static.wixstatic.com/media/f0a7d3_03827f88c0024960b0ef3f8b79d447a5~mv2_d_2480_1418_s_2.png/v1/fill/w_750,h_408,fp_0.50_0.50,q_90,usm_0.66_1.00_0.01/f0a7d3_03827f88c0024960b0ef3f8b79d447a5~mv2_d_2480_1418_s_2.webp">
-									<img onclick="slider(this.src)" src="https://static.wixstatic.com/media/f0a7d3_2a911057622f48a7afe90ac0c32ce684~mv2_d_2478_1426_s_2.png/v1/fill/w_750,h_408,fp_0.50_0.50,q_90,usm_0.66_1.00_0.01/f0a7d3_2a911057622f48a7afe90ac0c32ce684~mv2_d_2478_1426_s_2.webp">
-									<img onclick="slider(this.src)" src="https://static.wixstatic.com/media/f0a7d3_de6b5ba9b6344f3683e3840f6e52708e~mv2_d_2484_1432_s_2.png/v1/fill/w_750,h_408,fp_0.50_0.50,q_90,usm_0.66_1.00_0.01/f0a7d3_de6b5ba9b6344f3683e3840f6e52708e~mv2_d_2484_1432_s_2.webp">
-									<img onclick="slider(this.src)" src="https://static.wixstatic.com/media/f0a7d3_3d45ce395b1d4451925795316e9b973b~mv2_d_2482_1434_s_2.png/v1/fill/w_750,h_408,fp_0.50_0.50,q_90,usm_0.66_1.00_0.01/f0a7d3_3d45ce395b1d4451925795316e9b973b~mv2_d_2482_1434_s_2.webp">
-									<img onclick="slider(this.src)" src="https://static.wixstatic.com/media/f0a7d3_9f12c25b1289405aa506580187a621b9~mv2_d_2482_1428_s_2.png/v1/fill/w_750,h_408,fp_0.50_0.50,q_90,usm_0.66_1.00_0.01/f0a7d3_9f12c25b1289405aa506580187a621b9~mv2_d_2482_1428_s_2.webp">
-									<img onclick="slider(this.src)" src="https://static.wixstatic.com/media/f0a7d3_54b96a52d1fd45ffbd52aa6d6d426cb5~mv2_d_2480_1428_s_2.png/v1/fill/w_750,h_408,fp_0.50_0.50,q_90,usm_0.66_1.00_0.01/f0a7d3_54b96a52d1fd45ffbd52aa6d6d426cb5~mv2_d_2480_1428_s_2.webp">
+									<img onclick="slider(this.src)" src="images/animals01.png">
+									<img onclick="slider(this.src)" src="images/animals08.webp">
+									<img onclick="slider(this.src)" src="images/animals09.webp">
+									<img onclick="slider(this.src)" src="images/animals10.webp">
+									<img onclick="slider(this.src)" src="images/animals11.webp">
+									<img onclick="slider(this.src)" src="images/animals12.webp">
 								</div>
 							</div>
 						</div>
@@ -135,6 +135,7 @@
 				<script src="assets/js/breakpoints.min.js"></script>
 				<script src="assets/js/util.js"></script>
 				<script src="assets/js/main.js"></script>
+				<script src="assets/js/slider.js"></script>
 
 		</body>
 	</html>
