--- a/d3.html
+++ b/d3.html
@@ -53,13 +53,13 @@
 							<div class="aa-wrapper">
 								<h1 class="aa-heading">Visualizing movie data in D3.JS</h1>
 								<p class="aa-para">Turning a clunky dataset into something beautiful and useful.</p>
-								<img class="aa-img" src="https://static.wixstatic.com/media/f0a7d3_91f5efd94bd84e288238b922daba8590~mv2_d_2476_1412_s_2.png/v1/fill/w_750,h_563,fp_0.50_0.50,q_90,usm_0.66_1.00_0.01/f0a7d3_91f5efd94bd84e288238b922daba8590~mv2_d_2476_1412_s_2.webp">
+								<img class="aa-img" src="images/d301.webp">
 								<p class="aa-para">This semester at Cornell University, I was enrolled in an upper level CS course called "Data Driven Web Applications". As one of our projects a team of myself two others had to turn a large dataset into a meaningful visualization. </p>
 								<p class="aa-para">At the start we did a cursory glance at the various datasets available on Kaggle and based on these drew out various ideas. Our 3 favorites are shown below. </p>
 								<div class="aa-sectioning2">
-									<img src="https://static.wixstatic.com/media/f0a7d3_74ff59306fa845e9a058cccd1319e279~mv2.jpg/v1/fill/w_500,h_604,fp_0.50_0.50,q_90,usm_0.66_1.00_0.01/f0a7d3_74ff59306fa845e9a058cccd1319e279~mv2.webp">
-									<img src="https://static.wixstatic.com/media/f0a7d3_9fd0143a9c9d4d178092e5752f839bba~mv2.png/v1/fill/w_500,h_589,fp_0.50_0.50,q_90,usm_0.66_1.00_0.01/f0a7d3_9fd0143a9c9d4d178092e5752f839bba~mv2.webp">
-									<img src="https://static.wixstatic.com/media/f0a7d3_4d9f1e4f6f6446879930ddd9e8ef69ce~mv2.jpg/v1/fill/w_500,h_696,fp_0.50_0.50,q_90,usm_0.66_1.00_0.01/f0a7d3_4d9f1e4f6f6446879930ddd9e8ef69ce~mv2.webp">
+									<img src="images/d302.webp">
+									<img src="images/d303.webp">
+									<img src="images/d304.webp">
 								</div>
 								<p>
 									We were deciding between:<br/>
@@ -72,9 +72,9 @@
 									Our next challenge was thinking more closely about the chart we wanted for movie data, as we were also coders, we wanted to run through what each particular function would do. So we created a few sketches representing different ideas.
 								</p>
 								<div class="aa-sectioning2">
-									<img src="https://static.wixstatic.com/media/f0a7d3_099c9fc628ff44bf944b20f8788d1d72~mv2.jpg/v1/fill/w_250,h_250,fp_0.50_0.50,q_90,usm_0.66_1.00_0.01/f0a7d3_099c9fc628ff44bf944b20f8788d1d72~mv2.webp">
-									<img src="https://static.wixstatic.com/media/f0a7d3_9deb598fc1dd468896d718df88d838b4~mv2.jpg/v1/fill/w_250,h_250,fp_0.50_0.50,q_90,usm_0.66_1.00_0.01/f0a7d3_9deb598fc1dd468896d718df88d838b4~mv2.webp">
-									<img src="https://static.wixstatic.com/media/f0a7d3_4c662a078f1a411b8a781a77b4dca8d0~mv2.jpg/v1/fill/w_250,h_249,fp_0.50_0.50,q_90,usm_0.66_1.00_0.01/f0a7d3_4c662a078f1a411b8a781a77b4dca8d0~mv2.webp">
+									<img src="images/d305.webp">
+									<img src="images/d306.webp">
+									<img src="images/d307.webp">
 								</div>
 								<p class="aa-para">
 									The first idea we had was to have a grid of circles representing each film, and a slider that the user can utilize to filter movies by score. The X-axis would be the movie's budget and the Y-axis represents the revenue. On each corner of the graph would a commentary about how the film scores, so as an example: the corner of the graph representing a low budget and high revenue would be a indie success, a high budget and high revenue would be a blockbuster success, and a low budget and low grossing movie would mean "save your time!".
@@ -94,8 +94,8 @@
 									-A gallery of a few well known movies along with their descriptions upon click<br/>
 									-Clicking a movie directs the user to a highlighted circle on the graph representing that film<br/>
 								</p>
-								<img class="aa-img" src="https://static.wixstatic.com/media/f0a7d3_91f5efd94bd84e288238b922daba8590~mv2_d_2476_1412_s_2.png/v1/fill/w_750,h_563,fp_0.50_0.50,q_90,usm_0.66_1.00_0.01/f0a7d3_91f5efd94bd84e288238b922daba8590~mv2_d_2476_1412_s_2.webp">
-								<img class="aa-img" src="https://static.wixstatic.com/media/f0a7d3_54fed533a86749e68155c8e72a9cc491~mv2_d_2476_1400_s_2.png/v1/fill/w_750,h_563,fp_0.50_0.50,q_90,usm_0.66_1.00_0.01/f0a7d3_54fed533a86749e68155c8e72a9cc491~mv2_d_2476_1400_s_2.webp">
+								<img class="aa-img" src="images/d308.webp">
+								<img class="aa-img" src="images/d309.webp">
 								<p>Check out the final project <a href="https://github.com/hamedrabah/Movie-Data">here</a></p>
 							</div>
 						</div>
