--- a/design4good.html
+++ b/design4good.html
@@ -54,7 +54,7 @@
 								<h1 class="aa-heading">Designing for a startup helping refugees</h1>
 								<p class="aa-para">NaTakallam connects multilingual refugees with language learners through a video conferencing.</p>
 								<div class="aa-sectioning">
-									<img src="https://static.wixstatic.com/media/a27d24_9e05600d592947f7b83dce93ef65f14a~mv2.png/v1/fill/w_350,h_352,al_c,usm_0.66_1.00_0.01/a27d24_9e05600d592947f7b83dce93ef65f14a~mv2.png">
+									<img src="images/design01.png">
 									<p class="aa-para">We are facing the <strong>worst</strong> refugee crisis in <strong>history</strong>.<br/><br/>
 									<strong>65 Million children, women, and families</strong> have been displaced in Asia, Africa and the Middle East<br/><br/>
 									A desire to help led me to volunteer at NaTakallam, where I was to help the young startup with graphics.</p>
@@ -64,7 +64,7 @@
 									With over 11 different dialects, Arabic is a notoriously difficult language to learn. In this project I was assigned to design a map of Africa and the Middle East showcasing the diversity of the language.
 								</p>
 								<div class="aa-sectioning">
-									<img src="https://static.wixstatic.com/media/a27d24_41fe0d009fea4d1e823a90164b791807~mv2_d_2550_3300_s_4_2.jpg/v1/fill/w_350,h_453,al_c,q_90,usm_0.66_1.00_0.01/a27d24_41fe0d009fea4d1e823a90164b791807~mv2_d_2550_3300_s_4_2.webp">
+									<img src="images/design02.webp">
 									<p class="aa-para">
 										Since this poster was to be distributed on Facebook where a diverse range of people can view it,<br/><br/>
 										<span style="font-size: x-large;">"I knew I had to design something that was accessible for everyone."</span><br/><br/>
@@ -80,16 +80,16 @@
 								</p>
 								<div class="aa-sectioning">
 									<p class="quote">In researching how other applications approached teaching difficult languages - mnemonics stood out as a learning device.</p>
-									<img src="https://static.wixstatic.com/media/f0a7d3_7010a8554fb14210aa712da2648662b7~mv2.jpg/v1/fill/w_350,h_174,al_c,q_90,usm_0.66_1.00_0.01/f0a7d3_7010a8554fb14210aa712da2648662b7~mv2.webp">
+									<img src="images/design03.webp">
 								</div>
 								<p class="aa-para">
 									I decided that to make Arabic learning less intimidating, the first place to start had to be the alphabet. With this in mind, I set out to design fun mnemonic images that taught the first few letters of the Arabic alphabet. Doing so opens the doors to later on posting basic words, and creates an excitement for our users to continue language learning.
 								</p>
 								<div class="aa-sectioning">
-									<img src="https://static.wixstatic.com/media/f0a7d3_29852e6fbbec4a468670ebd13bf93d2a~mv2_d_3300_2550_s_4_2.jpg/v1/fill/w_500,h_387,fp_0.50_0.50,q_90,usm_0.66_1.00_0.01/f0a7d3_29852e6fbbec4a468670ebd13bf93d2a~mv2_d_3300_2550_s_4_2.webp">
-									<img src="https://static.wixstatic.com/media/f0a7d3_ecb3d00e0da84c0c93b65104f1c2d803~mv2_d_3300_2550_s_4_2.jpg/v1/fill/w_500,h_387,fp_0.50_0.50,q_90,usm_0.66_1.00_0.01/f0a7d3_ecb3d00e0da84c0c93b65104f1c2d803~mv2_d_3300_2550_s_4_2.webp">
-									<img src="https://static.wixstatic.com/media/f0a7d3_791f57f088a849a081edf47e628f0213~mv2_d_3300_2550_s_4_2.jpg/v1/fill/w_500,h_387,fp_0.50_0.50,q_90,usm_0.66_1.00_0.01/f0a7d3_791f57f088a849a081edf47e628f0213~mv2_d_3300_2550_s_4_2.webp">
-									<img src="https://static.wixstatic.com/media/f0a7d3_dca415f964884ddf9624cdd6d07c81f6~mv2_d_3300_2550_s_4_2.jpg/v1/fill/w_500,h_387,fp_0.50_0.50,q_90,usm_0.66_1.00_0.01/f0a7d3_dca415f964884ddf9624cdd6d07c81f6~mv2_d_3300_2550_s_4_2.webp">
+									<img src="images/design04.webp">
+									<img src="images/design05.webp">
+									<img src="images/design06.webp">
+									<img src="images/design07.webp">
 								</div>
 							</div>
 						</div>
