--- a/robots.html
+++ b/robots.html
@@ -65,7 +65,7 @@
 									Robots can fly. No, not the bipedal robots we normally think of, but rather drones. Drones are popular because of consumer applications, but the truth is the future of drones is going to be big, and it is going to be industrial. Drones are already playing a big part in farming such as by monitoring crops’ level of nutritional intake.
 								</p>
 								<div class="aa-sectioning">
-									<img style="max-height: 300px;" src="https://cdn-images-1.medium.com/max/1600/1*G2vO68PYSYXSai6zh9Athw.jpeg">
+									<img style="max-height: 300px;" src="images/robot01.jpeg">
 									<p class="aa-para">
 										Expect the roles of drones to expand into other industries such as mining, construction, and security. Imagine a drone that can mine and transport materials from a hard to reach mountain (extra points if that mountain is on a different planet), or a drone that can assist construction workers in building by placing items in otherwise dangerous locations, or a drone that can monitor banks 24/7 and provide facial recognition to ensure the bank is safe from known criminals.
 									</p>
@@ -78,7 +78,7 @@
 								</p>
 								<p class="aa-para">What difficulties will occur if the autonomous vehicles (AV) are different brands? If an iPhone can’t understand an Android it is not a problem for either user. However, if a Google Waymo car cannot understand a Tesla’s algorithm, this can cause serious problems for users of both cars.</p>
 								<div class="aa-sectioning">
-									<img src="https://cdn-images-1.medium.com/max/1600/1*IpZQLIRKTSbBqtYM0OM4MA.jpeg">
+									<img src="images/robot02.jpeg">
 									<p class="aa-para">How do car companies with different proprietary software collaborate enough so that the cars can communicate with each other, but not so much that they give their rival any secret sauce? Is there even a secret sauce when it comes to AV? Should car companies actually be allowed to have one or is it a safety concern if they don’t all follow the same algorithm?</p>
 								</div>
 								<p class="aa-para">
@@ -91,14 +91,14 @@
 									<p class="aa-para">
 										Another key example is the rise of 3D printing. With it, the marginal cost of creating hardware at scale has been substantially reduced, allowing greater margins on hardware. Furthermore it is now easier than ever to use 3D printing software to create detailed and nuanced changes to variations of products, without having to make serious changes to an assembly line or compromise scale of the core product.
 									</p>
-									<img src="https://cdn-images-1.medium.com/max/1600/1*FQQ1hYMATVQ1LePt0kSPFQ.jpeg">
+									<img src="images/robot03.jpeg">
 								</div>
 								<h2 class="subhead">Robots as a Service</h2>
 								<p class="aa-para">
 									Robots are no longer a pretty face, they are becoming useful. Especially in niche, non-sexy areas such as mining and agriculture.
 								</p>
 								<div class="aa-sectioning">
-									<img style="max-height: 300px;" src="https://cdn-images-1.medium.com/max/1600/1*kIfdOCmNO3m4DK1b_oHOiA.png">
+									<img style="max-height: 300px;" src="images/robot04.png">
 									<p class="aa-para">Apple picking is a notoriously boring and routine job that farmers (and their employees) hate. Thanks to advancements in Robotics this job can now be easily automated, which is not as easy as you would think. Apples come in different shapes, hardness, and grip, so creating a robot that can handle the breadth of apples in nature and grip them and store them appropriately is actually a complex problem. Thanks to these advancements, employees, and farmers are freed to do more interesting jobs.</p>
 								</div>
 								<p class="aa-para">
@@ -110,7 +110,7 @@
 								<p class="aa-para">
 									If there is one thing I took from the MIT conference it is this: we are at the early days of what is possible in Robotics and the truly exciting applications have yet to come. Machine learning, AI, and 3D printing are creating an inflection point in what is possible using Robotics and we are going to see a rapid acceleration in the technology as it applies to helping businesses create value.
 								</p>
-								<img class="aa-img" src="https://cdn-images-1.medium.com/max/1600/1*doISq7nDJgKnuvp9UjlALA.jpeg">
+								<img class="aa-img" src="images/robot05.jpeg">
 							</div>
 						</div>
 					</div>
