--- a/vc.html
+++ b/vc.html
@@ -75,7 +75,7 @@
 									<strong>Corporate VCs</strong> — These are a different kind of animal altogether. In some ways they are similar to large VCs, but differ in goals. While normal VCs goal is to make returns for their investors (limited partners), a corporate VC is more interested in acquiring technology for their parent company. Examples include Microsoft’s venture arm, GE ventures, and Intel Capital. These serve more as replacements to R&D in instances where the parent company views it as advantageous to acquire the tech/talent rather than build it in-house. Usually these VCs take a much larger controlling stake in investments and focus on companies that are likely acquisitions for their parent company.</p>
 								<h2 class="subhead">Lesson 3: The Work of a VC</h2>
 								<div class="aa-sectioning">
-									<img style="max-height: 400px;" src="https://cdn-images-1.medium.com/max/1200/1*KmBsZLDj37_vFbYxYEui2w.jpeg">
+									<img style="max-height: 400px;" src="images/vc01.jpeg">
 									<p class="aa-para" class="aa-para">
 										To somebody who watches Shark Tank or Planet of the Apps, it is easy to think that VCs spend their time sitting in chairs while companies pitch to them for 5 minutes and make an instant decision that determines the future of their company. This couldn’t be further from the truth.
 									</p>
@@ -101,7 +101,7 @@
 									<p class="aa-para">
 										We discovered the answer in our next investment, Pantera Capital. Pantera is a VC and hedge fund that is opening an new fund dedicated to ICOs, they have an investment team trained in studying the cryptocurrency market and analyzing which of the initial coin offerings are substantive companies that will exist in a few years, and which are strong at marketing, but lacking in substance.
 									</p>
-									<img style="height: 300px;" src="https://cdn-images-1.medium.com/max/1600/1*H7lxZh3QPqSGVedtCNuDqQ.jpeg">
+									<img style="height: 300px;" src="images/vc02.jpeg">
 								</div>
 								<p>
 									The Pantera Capital ICO fund will allow our VC to gain exposure to this 448% gain in YTD returns from an expert team, while mitigating risk for our investors, and allowing us as a VC to spend our time focusing on our speciality: early stage companies
@@ -121,7 +121,7 @@
 								</p>
 								<p class="aa-para">Venture is hard work, but I am glad I got the chance to do it, and I hope this is just the beginning of a lifelong career in helping entrepreneurs on the path to success.
 								got the chance to do it, and I hope this is just the beginning of a lifelong career in helping entrepreneurs on the path to success.</p>
-								<img style="max-height: 500px;" class="aa-img" src="https://cdn-images-1.medium.com/max/1600/1*bG9upZZwsX-saEqSFhz0Ow.jpeg">
+								<img style="max-height: 500px;" class="aa-img" src="images/vc03.jpeg">
 								<p style="text-align: center; font-weight: bold;">My boss, mentor, and role model: Namek</p>
 							</div>
 						</div>
