--- a/vc.html
+++ b/vc.html
@@ -132,6 +132,7 @@
 													<li><a href="https://twitter.com/hamedArabah" class="icon style2 fa-twitter"><span class="label">Twitter</span></a></li>
 													<li><a href="https://www.linkedin.com/in/hamedrabah/" class="icon style2 fa-linkedin"><span class="label">Dribbble</span></a></li>
 													<li><a href="https://github.com/hamedrabah" class="icon style2 fa-github"><span class="label">GitHub</span></a></li>
+													<li><a href="https://www.instagram.com/classichamoudi/" class="icon style2 fa-instagram"><span class="label">Instagram</span></a></li>
 													<li> <a href="mailto:hr277@cornell.edu" class="icon style2 fa-envelope-o"><span class="label">Email</span></a></li>
 												</ul>
 											</section>
