Added Xbox page

--- a/index.html
+++ b/index.html
@@ -62,6 +62,17 @@
 										</div>
 									</a>
 								</article>
+								<article class="style3">
+									<span class="image">
+										<img src="images/xbox.jpg" alt="" />
+									</span>
+									<a href="esports.html">
+										<h2>Xbox Esports</h2>
+										<div class="content">
+											<p>The solution I am proposing is a hub on both PC and Xbox for all things Esports — streaming tournaments, building a team, viewing live rankings, and engaging with the community.</p>
+										</div>
+									</a>
+								</article>
 								<article class="style2">
 									<span class="image">
 										<img src="images/venmo.jpg" alt="" />
@@ -74,7 +85,7 @@
 										</div>
 									</a>
 								</article>
-								<article class="style3">
+								<article class="style6">
 									<span class="image">
 										<img src="images/movie.png" alt="" />
 									</span>
