Added Microsoft watch

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 					</header>
 
 				<!-- Menu -->
-					<nav id="menu">
+					<!-- <nav id="menu">
 						<h2>Rabah</h2>
 						<ul>
 							<li><a href="index.html">Home</a></li>
@@ -41,7 +41,7 @@
 							<li><a href="generic.html">Consequat dolor</a></li>
 							<li><a href="elements.html">Elements</a></li>
 						</ul>
-					</nav>
+					</nav> -->
 
 				<!-- Main -->
 					<div id="main">
@@ -59,6 +59,17 @@
 										<h2>IBM Watson</h2>
 										<div class="content">
 											<p>Summer internship in product design at IBM Watson</p>
+										</div>
+									</a>
+								</article>
+								<article class="style2">
+									<span class="image">
+										<img src="images/watches3.png" alt="" />
+									</span>
+									<a href="watch.html">
+										<h2>Microsoft Watch</h2>
+										<div class="content">
+											<p> A concept for an enteprise focused smartwatch!</p>
 										</div>
 									</a>
 								</article>
@@ -85,7 +96,7 @@
 										</div>
 									</a>
 								</article>
-								<article class="style2">
+								<article class="style1">
 									<span class="image">
 										<img src="images/movie.jpg" alt="" />
 									</span>
@@ -107,7 +118,7 @@
 										</div>
 									</a>
 								</article>
-								<article class="style3">
+								<article class="style5">
 									<span class="image">
 										<img src="images/social.jpg" alt="" />
 									</span>
@@ -118,7 +129,7 @@
 										</div>
 									</a>
 								</article>
-								<article class="style1">
+								<article class="style4">
 									<span class="image">
 										<img src="images/robot.jpg" alt="" />
 									</span>
@@ -129,7 +140,7 @@
 										</div>
 									</a>
 								</article>
-								<article class="style3">
+								<article class="style2">
 									<span class="image">
 										<img src="images/bulb.jpg" alt="" />
 									</span>
@@ -140,17 +151,7 @@
 										</div>
 									</a>
 								</article>
-								<article class="style2">
-									<span class="image">
-										<img src="images/coming-soon.jpg" alt="" />
-									</span>
-									<a>
-										<h2>Coming soon...</h2>
-										<div class="content">
-											<p> I am just starting my career as a product designer, and I am excited for the road ahead!</p>
-										</div>
-									</a>
-								</article>
+
 								<!-- <article class="style1">
 									<span class="image">
 										<img src="images/pic09.jpg" alt="" />
