--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
 					<div id="main">
 						<div class="inner">
 							<header>
-								<h1>Product Designer<br />
-								HCI at Cornell University</h1>
+								<h1>Program Manager<br />
+								Microsoft</h1>
 							</header>
 							<section class="tiles">
 								<article class="style1">
