--- a/index.html
+++ b/index.html
@@ -47,8 +47,7 @@
 					<div id="main">
 						<div class="inner">
 							<header>
-								<h1>Program Manager at Microsoft<br />
-								HCI at Cornell University</h1>
+								<h1>Program Manager at Microsoft<br /> </h1> 
 							</header>
 							<section class="tiles">
 								<article class="style1">
