--- a/index.html
+++ b/index.html
@@ -15,18 +15,14 @@
 				<!-- Header -->
 					<header id="header">
 						<div class="inner">
-
-							<!-- Logo -->
-								<a href="index.html" class="logo">
-									<span class="symbol"><img src="images/logo.svg" alt="" /></span><span class="title">Hamed Rabah</span>
-								</a>
-
-							<!-- Nav - might use in the future-->
-								<!-- <nav>
-									<ul>
-										<li><a href="#menu">Menu</a></li>
-									</ul>
-								</nav> -->
+            <!-- Logo -->
+			<a href="index.html" class="logo">
+                <span class="symbol"><img src="images/logo.svg" alt="" /></span><span class="title">Hamed Rabah</span>
+                <br></a>
+                        <!-- <nav> --> 
+              <a href="index.html"> <br>   <span class="navBar">Home</span></a>
+           <a href="game.html"> <span class="navBar">Game</span></a> 
+            <a href="books.html">  <span class="navBar">Books</span> </a>
 
 						</div>
 					</header>
