--- a/game.html
+++ b/game.html
@@ -16,36 +16,25 @@
             <!-- Logo -->
               <a href="index.html" class="logo">
                 <span class="symbol"><img src="images/logo.svg" alt="" /></span><span class="title">Hamed Rabah</span>
-              </a>
-
-            <!-- Nav - might use in the future-->
-              <!-- <nav>
-                <ul>
-                  <li><a href="#menu">Menu</a></li>
-                </ul>
-              </nav> -->
-
+                <br></a>
+                        <!-- <nav> --> 
+                          <a href="index.html"> <br>   <span class="navBar">Home</span></a>
+                          <a href="game.html"> <span class="navBar">Game</span></a> 
+                           <a href="books.html">  <span class="navBar">Books</span> </a>
           </div>
         </header>
 
-      <!-- Menu -->
-        <!-- <nav id="menu">
-          <h2>Rabah</h2>
-          <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="generic.html">Ipsum veroeros</a></li>
-            <li><a href="generic.html">Tempus etiam</a></li>
-            <li><a href="generic.html">Consequat dolor</a></li>
-            <li><a href="elements.html">Elements</a></li>
-          </ul>
-        </nav> -->
+
 
       <!-- Main -->
         <div id="main">
           <div class="inner">
             <header>
               <h1>Program Manager at Microsoft<br /> </h1> 
+                    <!-- Menu -->
             </header>
+            <h3> Penguin Pals!</h3>
+            <p> This is a Flappy-Bird style game that I made for fun to learn Unity.</p>
     <script src="TemplateData/UnityProgress.js"></script>
     <script src="Build/UnityLoader.js"></script>
     <script>
@@ -58,7 +47,7 @@
       <div class="footer">
         <div class="webgl-logo"></div>
         <div class="fullscreen" onclick="gameInstance.SetFullscreen(1)"></div>
-        <div class="title">flappy</div>
+        
       </div>
     </div>
   </body>
