--- a/index.html
+++ b/index.html
@@ -16,9 +16,13 @@
 					<header id="header">
 						<div class="inner">
             <!-- Logo -->
-			<a href="index.html" class="logo">
-                <span class="symbol"><img src="images/logo.svg" alt="" /></span><span class="title">Hamed Rabah</span>
-                <br></a>
+			
+				<header>
+					<h1>Hamed Rabah<br /> </h1> 
+					<a href="index.html" class="logo">
+					<span class="title">PM at Microsoft</span>
+				<br></a>
+				</header>
                         <!-- <nav> --> 
               <a href="index.html"> <br>   <span class="navBar">Home</span></a>
            <a href="game.html"> <span class="navBar">Game</span></a> 
@@ -42,9 +46,6 @@
 				<!-- Main -->
 					<div id="main">
 						<div class="inner">
-							<header>
-								<h1>Program Manager at Microsoft<br /> </h1> 
-							</header>
 							<section class="tiles">
 								<article class="style1">
 									<span class="image">
