--- a/game.html
+++ b/game.html
@@ -10,17 +10,17 @@
     <div id="wrapper">
 
       <!-- Header -->
-        <header id="header">
-          <div class="inner">
+      <header>
+        <h1>Hamed Rabah<br /> </h1> 
+        <a href="index.html" class="logo">
+        <span class="title">PM at Microsoft</span>
+      <br></a>
+      </header>
+                      <!-- <nav> --> 
+            <a href="index.html"> <br>   <span class="navBar">Home</span></a>
+         <a href="game.html"> <span class="navBar">Game</span></a> 
+          <a href="books.html">  <span class="navBar">Books</span> </a>
 
-            <!-- Logo -->
-              <a href="index.html" class="logo">
-                <span class="symbol"><img src="images/logo.svg" alt="" /></span><span class="title">Hamed Rabah</span>
-                <br></a>
-                        <!-- <nav> --> 
-                          <a href="index.html"> <br>   <span class="navBar">Home</span></a>
-                          <a href="game.html"> <span class="navBar">Game</span></a> 
-                           <a href="books.html">  <span class="navBar">Books</span> </a>
           </div>
         </header>
 
